--- a/apigateway.properties
+++ b/apigateway.properties
@@ -4,4 +4,26 @@ server.port=9000
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.server.enableReplication=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discoveryservice:discoveryservice@localhost:8761/eureka/
+spring.cloud.gateway.server.webflux.default-filters=PreserveHostHeader
+
+#spring.cloud.gateway.default-filters=PreserveHostHeader
+#spring.cloud.gateway.httpclient.wiretap=true
+
+# apigateway credentials
+spring.security.user.name=apigateway
+spring.security.user.password=apigateway
+
+# client credentials
+#department service
+departmentservice.auth.username=departmentservice
+departmentservice.auth.password=departmentservice
+#employeeservice
+employeeservice.auth.username=employeeservice
+employeeservice.auth.password=employeeservice
+# leave service
+leavemanagementservice.auth.username=leavemanagementservice
+leavemanagementservice.auth.password=leavemanagementservice
+
+# shared secret between api gateway and downstream services
+apigateway.shared.secret=ncucollegesecret@123
