--- a/departmentservice.properties
+++ b/departmentservice.properties
@@ -3,10 +3,14 @@ spring.application.name=departmentservice
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/departmentdb
 spring.datasource.username=root
-spring.datasource.password=Himani#2415NH
+spring.datasource.password=Lakshay@1808
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.server.enableReplication=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discoveryservice:discoveryservice@localhost:8761/eureka/
+spring.security.user.name=departmentservice
+spring.security.user.password=departmentservice
+
+apigateway.shared.secret=ncucollegesecret@123
