--- a/employeeservice.properties
+++ b/employeeservice.properties
@@ -3,11 +3,14 @@ spring.application.name=employeeservice
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/employeedb
 spring.datasource.username=root
-spring.datasource.password=Himani#2415NH
+spring.datasource.password=Himani2415#NH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.server.enableReplication=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discoveryservice:discoveryservice@localhost:8761/eureka/
+spring.security.user.name=employeeservice
+spring.security.user.password=employeeservice
+
