--- a/servicediscovery.properties
+++ b/servicediscovery.properties
@@ -6,4 +6,7 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.server.enableReplication=false
 eureka.instance.homePageUrl=http://localhost:8761/
-spring.cloud.config.failFast=false
+
+spring.security.user.name=discoveryservice
+spring.security.user.password=discoveryservice
+
