--- a/employeeservice.properties
+++ b/employeeservice.properties
@@ -3,7 +3,7 @@ spring.application.name=employeeservice
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/employeedb
 spring.datasource.username=root
-spring.datasource.password=Himani2415#NH
+spring.datasource.password=Himani#2415NH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
