--- a/employeeservice.properties
+++ b/employeeservice.properties
@@ -14,3 +14,4 @@ eureka.client.service-url.defaultZone=http://discoveryservice:discoveryservice@l
 spring.security.user.name=employeeservice
 spring.security.user.password=employeeservice
 
+apigateway.shared.secret=ncucollegesecret@123
